[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/ui/arrow_left.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/arrow_down_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/arrow_right_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/arrow_left_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/arrow_down.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/arrow_up.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/arrow_up_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://assets/Small Icons/15.png" type="Texture" id=9]
[ext_resource path="res://materials/boards.tres" type="TileSet" id=10]
[ext_resource path="res://assets/Small Text/5.png" type="Texture" id=11]
[ext_resource path="res://assets/Small Text/15.png" type="Texture" id=12]
[ext_resource path="res://scenes/Controls/Controls.gd" type="Script" id=13]
[ext_resource path="res://assets/Small Icons/26.png" type="Texture" id=14]
[ext_resource path="res://materials/btns.tres" type="TileSet" id=15]
[ext_resource path="res://misc/TextureButton.gd" type="Script" id=16]
[ext_resource path="res://assets/Small Text/22.png" type="Texture" id=17]
[ext_resource path="res://assets/Small Text/19.png" type="Texture" id=18]
[ext_resource path="res://assets/Small Text/13.png" type="Texture" id=19]
[ext_resource path="res://assets/Small Text/50.png" type="Texture" id=22]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="Left" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 8, 328 )
z_index = 2
normal = ExtResource( 1 )
pressed = ExtResource( 4 )
action = "ui_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 40, 328 )
z_index = 2
normal = ExtResource( 8 )
pressed = ExtResource( 3 )
action = "ui_right"
visibility_mode = 1

[node name="Up" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 168, 296 )
z_index = 2
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
action = "ui_up"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 168, 328 )
z_index = 2
normal = ExtResource( 5 )
pressed = ExtResource( 2 )
action = "ui_down"
visibility_mode = 1

[node name="RetryBtn" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="Texture" type="TileMap" parent="RetryBtn"]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 21, 0, 1, 23, 0, 65536, 29, 0, 65537, 31, 0 )

[node name="26" type="Sprite" parent="RetryBtn"]
position = Vector2( 16, 14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="MenuBtn" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="Texture" type="TileMap" parent="MenuBtn"]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 21, 0, 1, 23, 0, 65536, 29, 0, 65537, 31, 0 )

[node name="15" type="Sprite" parent="MenuBtn"]
position = Vector2( 16, 14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Attempts" type="Node2D" parent="."]
position = Vector2( -5, 8 )
z_index = 2

[node name="TileMap" type="TileMap" parent="Attempts"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 41, 0, 1, 42, 0, 2, 43, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Attempts"]
margin_left = 16.0
margin_top = 13.0
margin_right = 80.0
margin_bottom = 19.0
custom_constants/separation = 1
alignment = 1

[node name="Letter1" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 13.0
margin_right = 18.0
margin_bottom = 6.0
texture = ExtResource( 19 )

[node name="Letter2" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 19.0
margin_right = 24.0
margin_bottom = 6.0
texture = ExtResource( 12 )

[node name="Letter3" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 25.0
margin_right = 30.0
margin_bottom = 6.0
texture = ExtResource( 17 )

[node name="Letter4" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 31.0
margin_right = 36.0
margin_bottom = 6.0
texture = ExtResource( 11 )

[node name="Letter5" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 37.0
margin_right = 42.0
margin_bottom = 6.0
texture = ExtResource( 18 )

[node name="Letter6" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 43.0
margin_right = 48.0
margin_bottom = 6.0
texture = ExtResource( 22 )

[node name="Digit1" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 49.0
margin_right = 49.0
margin_bottom = 6.0

[node name="Digit2" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 50.0
margin_right = 50.0
margin_bottom = 6.0

[node name="Digit3" type="TextureRect" parent="Attempts/HBoxContainer"]
margin_left = 51.0
margin_right = 51.0
margin_bottom = 6.0

[node name="Label" type="Node2D" parent="Attempts/HBoxContainer"]

[connection signal="pressed" from="RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]
